Prevent tap highlight on Mobile Safari

--- a/scss/foundation/components/_global.scss
+++ b/scss/foundation/components/_global.scss
@@ -278,7 +278,10 @@ $cursor-text-value: text !default;
   }
 
   html,
-  body { font-size: $base-font-size; }
+  body {
+    font-size: $base-font-size;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  }
 
   // Default body styles
   body {
